--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body{
     background-color: rgb(0, 0, 0);
     color: cornflowerblue;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: 12px;
+font-weight: normal;
+
+line-height: 1.6em;
+}
+.box-1{
+    background-color: rgba(56, 61, 61, 0.438);
+color: #fff;
 }
