--- a/style.css
+++ b/style.css
@@ -7,7 +7,16 @@ font-weight: normal;
 
 line-height: 1.6em;
 }
+
+.container{
+    width: 500px;
+    margin: auto;
+    
+
+}
+
 .box-1{
     background-color: rgba(56, 61, 61, 0.438);
 color: #fff;
+
 }
