--- a/style.css
+++ b/style.css
@@ -20,4 +20,8 @@ line-height: 1.6em;
 color: #fff;
 border: 5px blue solid;
 border-width: 2px;
+padding: 20px;
+margin-top: 20px;
+margin-bottom: 20px;
+
 }
