--- a/style.css
+++ b/style.css
@@ -57,7 +57,11 @@ margin-bottom: 20px;
 
 }
 .categories ul{
-    padding: 0;
+    padding-left: 20px;
     list-style: square;
 
+}
+.categories li{
+    padding-bottom: 8px;
+    border-bottom: dotted 1px #333;
 }
