--- a/style.css
+++ b/style.css
@@ -56,10 +56,12 @@ margin-bottom: 20px;
     border-radius: 15px;
 
 }
+
 .categories h2{
     text-align: center;
 
 }
+
 .categories ul{
     padding-left: 20px;
     list-style: square;
@@ -73,5 +75,8 @@ margin-bottom: 20px;
     float: left;
     width: 33.33%;
     
-
+}
+.box-2 h5{
+    font-weight: 500;
+    font-weight: 800;
 }
